# rpng

./: .gitignore  2x2.txt  Cargo.toml  control  frufru.txt  test_pixels.py
benches/: bench.rs
src/: chunks.rs  common.rs  decoder.rs  encoder.rs  errors.rs  filter.rs  interlacing.rs  lib.rs  main.rs  png.rs  utils.rs
